<?xml version="1.0"?>
<package>
  <name>keyboard_teleop</name>
  <version>0.6.0</version>
  <description>Generic keyboard teleop for twist robots.</description>

  <maintainer email="llach@techfak.uni-bielefeld.de">llach</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
